--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
   // =========================
   // 1) CONFIG (change these)
   // =========================
+  //ofcourse you can get my details here and misuse this but remember i am trying to do this to help people..
   const ADMIN_USERNAME = "admin";          // change
   const ADMIN_PASSWORD = "1234";           // change
   const STORAGE_KEY = "madhav_video_portal_videos_v1";
